@@ -22,10 +22,15 @@ package org.candlepin.subscriptions.event;
 
 import java.util.ArrayList;
 import java.util.HashMap;
-import java.util.LinkedList;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.StringUtils;
 import org.candlepin.subscriptions.db.EventRecordRepository;
@@ -40,9 +45,12 @@ import org.springframework.stereotype.Component;
 /**
  * Responsible for resolving conflicting {@link org.candlepin.subscriptions.db.model.EventRecord}s
  * for incoming {@link org.candlepin.subscriptions.json.Event} messages and resolving them. A
- * conflict occurs when an incoming event shares the same lookup hash as existing event records in
- * the DB. Since event records can share the same timestamp, all existing records will be included
- * during resolution.
+ * conflict occurs when an incoming event shares the same {@link EventKey} as existing event records
+ * in the DB. Since event records can share the same org_id, timestamp, and instance_id, all
+ * existing matching records will be included during resolution.
+ *
+ * <p>Event conflict resolution is also done based on product tags since buckets are product_id
+ * (tag) based and measurements apply to each bucket.
  *
  * <pre>
  * Example Conflict/Resolutions:
@@ -54,9 +62,19 @@ import org.springframework.stereotype.Component;
  * Conflicting event with different measurements
  *  - EventRecord added with a negative accumulative measurement value
  *  - e.g. An incoming event has a measurement of 10 cores. An existing EventRecord matching
- *         the lookup hash has a measurement of 20 cores. An EventRecord would be created with
- *         a cores value of -10 and another EventRecord created to apply the new value of 20
- *         cores.
+ *         the incoming event's Event Key has a measurement of 20 cores. An EventRecord would
+ *         be created with a cores value of -10 and another EventRecord created to apply the
+ *         new value of 20 cores.
+ * Conflicting event with different product tags.
+ *  - Amendments are created based on measurement coverage for each included tag.
+ *  - An incoming event may be broken down into 'derived' events in the case that a tag
+ *    from an incoming event does not yet have measurements.
+ *  - e.g. An incoming event has a measurement of 6 cores for tags T1 and T2. An existing
+ *         EventRecord, matching the incoming EventKey, has a measurement of 6 cores for
+ *         tag T1. Only a single EventRecord (AmendmentType.DERIVED) would be created for
+ *         tag T2 with a cores measurement value of 6. In this case, the existing event
+ *         already covers the 6 cores for tag T1, so we only need to include the incoming
+ *         value for T2.
  * </pre>
  */
 @Slf4j
@@ -73,101 +91,204 @@ public class EventConflictResolver {
     this.resolvedEventMapper = resolvedEventMapper;
   }
 
-  public List<EventRecord> resolveIncomingEvents(Map<EventKey, Event> eventsToResolve) {
+  public List<EventRecord> resolveIncomingEvents(List<Event> incomingEvents) {
     log.info("Resolving existing events for incoming batch.");
-    Map<EventKey, List<EventRecord>> allConflicting = getConflictingEvents(eventsToResolve);
-    // Nothing to resolve
-    if (allConflicting.isEmpty()) {
-      log.info("No conflicting incoming events in batch. Nothing to resolve.");
-      return eventsToResolve.values().stream().map(EventRecord::new).toList();
-    }
+    Map<EventKey, List<Event>> eventsToResolve =
+        incomingEvents.stream()
+            .collect(
+                Collectors.groupingBy(
+                    EventKey::fromEvent, LinkedHashMap::new, Collectors.toList()));
+    Map<EventKey, List<EventRecord>> allConflicting =
+        getConflictingEvents(eventsToResolve.keySet());
 
     // Resolve any conflicting events.
-    List<EventRecord> resolvedEvents = new LinkedList<>();
+    List<EventRecord> resolvedEvents = new ArrayList<>();
     eventsToResolve.forEach(
-        (key, event) -> {
-          if (allConflicting.containsKey(key)) {
-            List<EventRecord> resolvedConflicts =
-                resolveEventConflicts(event, allConflicting.get(key));
-            // When there is a conflict with no resolution, the incoming event is a duplicate
-            // and there is no need to add it as resolved.
-            if (resolvedConflicts.isEmpty()) {
-              return;
-            }
-            resolvedEvents.addAll(resolvedConflicts);
-          }
-          // Include the incoming event since this event will be the new value.
-          resolvedEvents.add(new EventRecord(event));
-        });
+        (key, eventList) ->
+            eventList.forEach(
+                event -> {
+                  // Track all tags by metric_id for which the measurement is not already
+                  // covered by a conflicting event. This mapping will be used to normalize
+                  // the incoming event's tags once measurement coverage is determined.
+                  Map<String, Set<String>> tagsByUncoveredMeasurement = new HashMap<>();
+                  if (allConflicting.containsKey(key)) {
+                    // Get measurement totals for incoming event (will be applied to all incoming
+                    // tags).
+                    Map<String, Double> incomingTotals = getMeasurementTotals(Stream.of(event));
+                    Set<String> tags = Optional.ofNullable(event.getProductTag()).orElse(Set.of());
+                    for (String tag : tags) {
+                      Map<String, Double> existingMeasurementTotals =
+                          getMeasurementTotals(
+                              tag, allConflicting.get(key).stream().map(EventRecord::getEvent));
 
-    log.info("Resolved {} events", resolvedEvents.size());
+                      // Create any amendments required (nothing if already covered).
+                      Set<String> uncoveredMeasurements =
+                          getUncoveredMeasurements(incomingTotals, existingMeasurementTotals);
+                      if (uncoveredMeasurements.isEmpty()) {
+                        // The tag is already fully covered.
+                        log.debug(
+                            "Event tag {} appears to already be applied based on its measurements. {}",
+                            tag,
+                            event);
+                        continue;
+                      }
 
+                      List<EventRecord> amendments =
+                          createAmendments(
+                              event, tag, uncoveredMeasurements, existingMeasurementTotals);
+                      // Add newly resolved conflicts so that the next event considers them.
+                      allConflicting.get(key).addAll(amendments);
+                      resolvedEvents.addAll(amendments);
+
+                      // Tags by uncovered measurement.
+                      uncoveredMeasurements.forEach(
+                          m ->
+                              tagsByUncoveredMeasurement
+                                  .computeIfAbsent(m, k -> new HashSet<>())
+                                  .add(tag));
+                    }
+
+                    // Some of the tags on the event may already be covered by conflicting
+                    // event measurements. We need to normalize the existing event by ensuring
+                    // only the applicable tags are set on the incoming event, and create derived
+                    // events for any tag/measurements that do not apply to all tags on the
+                    // incoming event.
+                    List<EventRecord> normalized =
+                        normalizeIncoming(event, tagsByUncoveredMeasurement);
+                    allConflicting.putIfAbsent(key, new ArrayList<>());
+                    allConflicting.get(key).addAll(normalized);
+                    resolvedEvents.addAll(normalized);
+                  } else {
+                    // No conflict so the Event is added as is. It must then be
+                    // considered as an existing conflict so it will be considered
+                    // by other incoming events.
+                    EventRecord eventRecord = new EventRecord(event);
+                    allConflicting.putIfAbsent(key, new ArrayList<>());
+                    allConflicting.get(key).add(eventRecord);
+                    resolvedEvents.add(eventRecord);
+                  }
+                }));
+    log.info(
+        "Finishing resolving events for incoming batch. In={} Resolved={}",
+        incomingEvents.size(),
+        resolvedEvents.size());
     return resolvedEvents;
   }
 
-  private List<EventRecord> resolveEventConflicts(
-      Event incomingEvent, List<EventRecord> conflictingEvents) {
-    return resolveEventMeasurements(incomingEvent, conflictingEvents);
-  }
+  /**
+   * Updates the incoming event so that it contains the appropriate tags/measurements based on all
+   * tags that have uncovered measurements.
+   *
+   * @param incoming the incoming Event
+   * @param tagsByUncoveredMeasurements all tags by measurements that have uncovered usage.
+   * @return a normalizes List of Event records.
+   */
+  private List<EventRecord> normalizeIncoming(
+      Event incoming, Map<String, Set<String>> tagsByUncoveredMeasurements) {
+    // If the event's measurements are already fully covered, there's nothing to normalize.
+    if (tagsByUncoveredMeasurements.isEmpty()) {
+      return List.of();
+    }
 
-  private Map<String, Double> determineMeasurementDeductions(List<EventRecord> conflictingEvents) {
-    Map<String, Double> deductions = new HashMap<>();
-    conflictingEvents.stream()
-        .map(EventRecord::getEvent)
-        .forEach(
-            e ->
-                e.getMeasurements()
-                    .forEach(
-                        m -> {
-                          String metricId = getMetricId(m);
-                          deductions.putIfAbsent(metricId, 0.0);
-                          deductions.put(metricId, deductions.get(metricId) - m.getValue());
-                        }));
-    return deductions;
-  }
-
-  private List<EventRecord> resolveEventMeasurements(
-      Event toResolve, List<EventRecord> conflictingEvents) {
-    Map<String, Measurement> deductionEvents =
-        getDeductionMeasurements(toResolve, determineMeasurementDeductions(conflictingEvents));
-
-    // Create events for each measurement deduction.
-    List<EventRecord> resolved = new ArrayList<>();
-    deductionEvents.forEach(
-        (metricId, measurement) -> {
-          Event deductionEvent = createRecordFrom(toResolve);
-          deductionEvent.setAmendmentType(AmendmentType.DEDUCTION);
-          deductionEvent.setMeasurements(List.of(measurement));
-          resolved.add(new EventRecord(deductionEvent));
-        });
-    return resolved;
-  }
-
-  private Map<String, Measurement> getDeductionMeasurements(
-      final Event toResolve, Map<String, Double> measurementDeductions) {
-    // Measurements need to be resolved individually since conflicting events
-    // could potentially contain different measurement sets.
-    Map<String, Measurement> deductions = new HashMap<>();
-    for (Measurement measurement : toResolve.getMeasurements()) {
-      String metricId = getMetricId(measurement);
-      if (measurementDeductions.containsKey(metricId)) {
-        Double deduction = measurementDeductions.get(metricId);
-        // If we had a conflicting Event, but the measurement value was the same,
-        // there's nothing to resolve as they are considered equal. This will
-        // NOT result in a new EventRecord for the measurement.
-        //
-        // The deduction value is expected to be <= 0, so we compare
-        // by adding the incoming value to it to see if the result is 0.
-        if (deduction + measurement.getValue() == 0.0) {
-          log.debug("Incoming event measurement is a duplicate. Nothing to resolve.");
-          continue;
-        }
-        deductions.put(
-            metricId,
-            new Measurement().withMetricId(metricId).withUom(metricId).withValue(deduction));
+    Map<String, List<Measurement>> incomingMeasurements =
+        incoming.getMeasurements().stream().collect(Collectors.groupingBy(this::getMetricId));
+    List<Measurement> measurementsMatchingIncomingTags = new ArrayList<>();
+    List<Measurement> measurementsNotMatchingIncomingTags = new ArrayList<>();
+    for (Entry<String, Set<String>> entry : tagsByUncoveredMeasurements.entrySet()) {
+      if (entry.getValue().equals(incoming.getProductTag())
+          && incomingMeasurements.containsKey(entry.getKey())) {
+        measurementsMatchingIncomingTags.addAll(incomingMeasurements.get(entry.getKey()));
+      } else {
+        measurementsNotMatchingIncomingTags.addAll(incomingMeasurements.get(entry.getKey()));
       }
     }
-    return deductions;
+
+    List<EventRecord> normalizedEvents = new ArrayList<>();
+    // Update the incoming event to include only the measurements that match the
+    // tags of the incoming event. If there are none, then do not include the incoming
+    // event at all. Measurements will be covered by derived events.
+    if (!measurementsMatchingIncomingTags.isEmpty()) {
+      AmendmentType type =
+          incoming.getMeasurements().size() == measurementsMatchingIncomingTags.size()
+              ? null
+              : AmendmentType.DERIVED;
+      incoming.setAmendmentType(type);
+      incoming.setMeasurements(measurementsMatchingIncomingTags);
+      normalizedEvents.add(new EventRecord(incoming));
+    }
+
+    // Create derived events for each measurement that is not already covered,
+    // and did not match the tags of the incoming event.
+    for (Measurement measurement : measurementsNotMatchingIncomingTags) {
+      Event derived = createRecordFrom(incoming);
+      derived.setAmendmentType(AmendmentType.DERIVED);
+      derived.setProductTag(tagsByUncoveredMeasurements.get(measurement.getMetricId()));
+      derived.setMeasurements(List.of(measurement));
+      normalizedEvents.add(new EventRecord(derived));
+    }
+
+    return normalizedEvents;
+  }
+
+  private Map<String, Double> getMeasurementTotals(String tag, Stream<Event> incomingEventStream) {
+    return getMeasurementTotals(
+        incomingEventStream.filter(toFilter -> toFilter.getProductTag().contains(tag)));
+  }
+
+  private Map<String, Double> getMeasurementTotals(Stream<Event> incomingEventStream) {
+    Map<String, Double> totals = new HashMap<>();
+    incomingEventStream.forEach(
+        event ->
+            event
+                .getMeasurements()
+                .forEach(
+                    m -> {
+                      double currentTotal = totals.getOrDefault(getMetricId(m), 0.0);
+                      totals.put(getMetricId(m), currentTotal + m.getValue());
+                    }));
+    return totals;
+  }
+
+  private Set<String> getUncoveredMeasurements(
+      Map<String, Double> incoming, Map<String, Double> existing) {
+    Set<String> uncovered = new HashSet<>();
+    for (Map.Entry<String, Double> entry : incoming.entrySet()) {
+      if (!existing.containsKey(entry.getKey())
+          || !existing.get(entry.getKey()).equals(entry.getValue())) {
+        uncovered.add(entry.getKey());
+      }
+    }
+    return uncovered;
+  }
+
+  private List<EventRecord> createAmendments(
+      Event incomingEvent,
+      String applicableTag,
+      Set<String> uncoveredMeasurements,
+      Map<String, Double> existingMeasurementTotals) {
+    List<EventRecord> amendments = new ArrayList<>();
+    incomingEvent
+        .getMeasurements()
+        .forEach(
+            incomingMeasurement -> {
+              String metricId = getMetricId(incomingMeasurement);
+              if (uncoveredMeasurements.contains(metricId)
+                  && existingMeasurementTotals.containsKey(metricId)) {
+                // Only need to create a deduction amendment for measurements that are not
+                // already covered and that already exist.
+                Event deductionEvent = createRecordFrom(incomingEvent);
+                deductionEvent.setProductTag(Set.of(applicableTag));
+                deductionEvent.setAmendmentType(AmendmentType.DEDUCTION);
+                Measurement measurement =
+                    new Measurement()
+                        .withMetricId(metricId)
+                        .withUom(metricId)
+                        .withValue(existingMeasurementTotals.get(metricId) * -1);
+                deductionEvent.setMeasurements(List.of(measurement));
+                amendments.add(new EventRecord(deductionEvent));
+              }
+            });
+    return amendments;
   }
 
   private String getMetricId(Measurement measurement) {
@@ -176,10 +297,11 @@ public class EventConflictResolver {
         : measurement.getUom();
   }
 
-  private Map<EventKey, List<EventRecord>> getConflictingEvents(
-      Map<EventKey, Event> incomingEvents) {
-    return eventRecordRepository.findConflictingEvents(incomingEvents.keySet()).stream()
-        .collect(Collectors.groupingBy(e -> EventKey.fromEvent(e.getEvent())));
+  private Map<EventKey, List<EventRecord>> getConflictingEvents(Set<EventKey> eventKeys) {
+    return eventRecordRepository.findConflictingEvents(eventKeys).stream()
+        .collect(
+            Collectors.groupingBy(
+                e -> EventKey.fromEvent(e.getEvent()), LinkedHashMap::new, Collectors.toList()));
   }
 
   private Event createRecordFrom(Event from) {
